# assessment-webservice

./: .gitignore  Dockerfile  LICENSE  Main.hs  README.md  assessment.cabal  start.sh
scripts/: dockerstart.sh  test.sh
src/: Main.hs  TestServer.hs  Worker.hs
src/Assessment/: Config.hs  Data.hs  External.hs  Job.hs  Log.hs  Types.hs  Work.hs
src/System/: Hworker.hs
tests/: bad.txt  good.txt  hello.txt
