name:          assessment
version:       0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brad Safnuk
maintainer:          brad.safnuk@cmich.edu
-- copyright:           
category:            Web
cabal-version: >= 1.8
build-type:    Simple

executable          assessment
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , aeson
                  , http-types
