name:          assessment
version:       0.0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brad Safnuk
maintainer:          brad.safnuk@cmich.edu
-- copyright:           
category:            Web
cabal-version: >= 1.10
build-type:    Simple

library
  exposed-modules:  System.Hworker
                  , Assessment.Config
                  , Assessment.Data
                  , Assessment.External
                  , Assessment.Job
                  , Assessment.Log
                  , Assessment.Types
  other-modules:    Data.Aeson.Helpers
  ghc-options:    -Wall
  build-depends:    base >= 4.7 && < 5
                  , aeson
                  , attoparsec
                  , binary
                  , bytestring
                  , hedis >= 0.6.5
                  , mtl
                  , req
                  , system-filepath
                  , text
                  , time >= 1.5
                  , transformers
                  , turtle
                  , uuid >= 1.2.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable          assessment
    hs-source-dirs: src
    other-modules:  System.Hworker
                  , Assessment.Config
                  , Assessment.Data
                  , Assessment.External
                  , Assessment.Job
                  , Assessment.Log
                  , Assessment.Types
                  , Data.Aeson.Helpers
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , aeson
                  , attoparsec
                  , binary
                  , bytestring
                  , hedis >= 0.6.5
                  , http-types
                  , mtl
                  , req
                  , scotty
                  , system-filepath
                  , text
                  , time >= 1.5
                  , transformers
                  , turtle
                  , uuid >= 1.2.6
                  , assessment

executable         worker
    hs-source-dirs: src
    other-modules:  System.Hworker
                  , Assessment.Config
                  , Assessment.External
                  , Assessment.Job
                  , Assessment.Log
                  , Assessment.Types
                  , Data.Aeson.Helpers
    main-is:        Worker.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:  base   >= 4      && < 5
                  , aeson
                  , attoparsec
                  , binary
                  , bytestring
                  , hedis >= 0.6.5
                  , mtl
                  , req
                  , system-filepath
                  , text
                  , time >= 1.5
                  , transformers
                  , turtle
                  , uuid >= 1.2.6
                  , assessment

executable        dummy
    hs-source-dirs: src
    other-modules:  Assessment.Log
                  , Assessment.Types
                  , Data.Aeson.Helpers
                  , System.Hworker
    main-is:        TestServer.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:  base   >= 4      && < 5
                  , aeson
                  , attoparsec
                  , binary
                  , bytestring
                  , hedis >= 0.6.5
                  , http-types
                  , mtl
                  , scotty
                  , text
                  , time >= 1.5
                  , transformers
                  , uuid >= 1.2.6
                  , assessment

